add deleteWallet API
